--- a/client/frontend/public/index.html
+++ b/client/frontend/public/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
   <link rel="apple-touch-icon" href="./favicon.ico"/>
-  <title>dMeet: Web3 Meetings & Streaming</title>
+  <title>tonMeet: Web3 Meetings & Streaming</title>
   <meta name="description" content="Web3 Video Meetings & Streaming with instant crypto payout. Start in a few clicks. Invite via link. Get instant payout in cryptocurrency. Powered by dTelecom.">
-  <meta property="og:title" content="dMeet: Web3 Meetings & Streaming">
+  <meta property="og:title" content="tonMeet: Web3 Meetings & Streaming">
   <meta property="og:description" content="Web3 Video Meetings & Streaming with instant crypto payout. Start in a few clicks. Invite via link. Get instant payout in cryptocurrency. Powered by dTelecom.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
